# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = travis-exec
version = 2019.02.26
url = https://github.com/looking-for-a-job/travis-exec
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md

[options]
install_requires = 
	setuptools
scripts = 
	scripts/travis-exec
