# https://pypi.org/project/setupcfg-generator/
[metadata]
name = travis-exec
version = 2019.4.13
url = https://github.com/looking-for-a-job/travis-exec
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = travis

[options]
install_requires = 
	setuptools
scripts = 
	scripts/travis-exec
